Cwiczenie progressive web app

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
                 "glob": "**/*",
                 "input": "node_modules/leaflet/dist",
                 "output": "assets/leaflet"
-              }
+              },
+              "src/manifest.json"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -61,7 +62,8 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ]
+              ],
+              "serviceWorker": true
             }
           }
         },
@@ -96,7 +98,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
